[package]
name    = "name_exchanger_rs"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
#crate-type = ["staticlib"]
name       = "name_exchanger_rs"

[profile.release]
lto           = true
codegen-units = 1
opt-level     = "z"
strip         = true

[dependencies]
